[package]
name = "uniswap"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.218"
serde_json = "1.0.140"
env_logger = "0.11.6"
anyhow = "1.0.97"
log = "0.4"
dotenv = "0.15.0"
tokio = { version = "1.44", features = ["full"] }
ethers-middleware = "2.0.14"
ethers-providers = "2.0.14"
ethers ="2.0.14"
cfmms = "0.6.2"
lazy_static = "1.4"
futures = "0.3.26"
regex = "1.11.1"
bincode = "1.3.3"
indicatif = "0.17.11"
